--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
@@ -9,10 +9,12 @@ edificios:
 edificio/agregar:
     path: /edificio/agregar
     defaults: { _controller: UNTDFReservasAulasBundle:Edificio:new }
+    methods : [POST]
 
 edificio/borrar:
     path: /edificio/borrar/{id}
     defaults: { _controller: UNTDFReservasAulasBundle:Edificio:remove }
+    methods : [POST, PUT]
 
 edificio:
     path: /edificio/{id}
