--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
@@ -10,8 +10,8 @@ edificio/agregar:
     path: /edificio/agregar
     defaults: { _controller: UNTDFReservasAulasBundle:Edificio:new }
 
-edificio/create:
-    path: /edificio/create
+edificio/crear:
+    path: /edificio/crear
     defaults: { _controller: UNTDFReservasAulasBundle:Edificio:create }
     methods : [POST]
 
