Correccion del config para agregar el bootstrap

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,7 +32,7 @@ twig:
     form: 
         resourses: ['bootstrap_3_layout.html.twig']
 
-# Assetic Configuration
+# AssetiNombrec Configuration
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
