--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,6 @@ untdf_reservas_aulas:
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
