--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,8 @@ framework:
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
+    default_locale:  es
+    # default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
@@ -24,6 +25,7 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    translator: { fallbacks: es }
 
 # Twig Configuration
 twig:
