--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,6 +3,7 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: sha512
+        UNTDF\ReservasAulasBundle\Entity\User: sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
