FOSUserBundle - modificacion de menues para logueo, pantalla por defecto.

--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
@@ -52,5 +52,7 @@ edificio/ver:
     path: /edificio/ver/{id}
     defaults: { _controller: UNTDFReservasAulasBundle:Edificio:show }
     
-
+ReservasMain:
+    path: /
+    defaults: { _controller: UNTDFReservasAulasBundle:ReservasMain:index }
 
