--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
@@ -38,6 +38,11 @@ untdf_reservas_aulas_edificios:
     resource: "@UNTDFReservasAulasBundle/Resources/config/routing/edificio.yml"
     prefix:   /admin/edificios
     
+recurso_listado:
+    path:     /listadoReservas
+    defaults: { _controller: "UNTDFReservasAulasBundle:Reserva:listado" }
+    methods: [GET]
+    
 ReservasMain:
     path: /
     defaults: { _controller: UNTDFReservasAulasBundle:ReservasMain:index }
