change_password and navbar icon

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,7 @@ fos_user:
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
     prefix: /admin/register
+    
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /admin/profile/change-password
