Reserva * se modifico la clase index para ser filtrada * se agrego el twig a reserva que permita el filtrado dinamico * se corrigio el retorno de new y edit, para que actualice los filtros cuando retorna de la modificacion * se crea el twig indexfiltrado * se modificaron las rutas para poder eliminar la clase ReservaMain que se usaba cuando no habia un usuario conectado. * se modifico el navbar para sacar todos los submenues que eran pruebas. * ahora la fantalla index puede ser llamada con el parametro de las fechas que se usan como filtros (si no hay filtro de fecha, lo genera el mismo controlador)

--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing/reserva.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing/reserva.yml
@@ -1,10 +1,6 @@
 reserva:
     path:     /
-    defaults: { _controller: "UNTDFReservasAulasBundle:Reserva:index" }
-
-reserva_index2:
-    path:     /index2
-    defaults: { _controller: "UNTDFReservasAulasBundle:Reserva:index2" }
+    defaults: { _controller: "UNTDFReservasAulasBundle:Reserva:indexfiltrado" }
 
 reserva_show:
     path:     /{id}/show
