--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing.yml
@@ -41,12 +41,12 @@ untdf_reservas_aulas_edificios:
     resource: "@UNTDFReservasAulasBundle/Resources/config/routing/edificio.yml"
     prefix:   /admin/edificios
     
-recurso_listado:
-    path:     /listadoReservas
+reserva_listado_reservas:
+    path:     /listadoreservas
     defaults: { _controller: "UNTDFReservasAulasBundle:Reserva:listado" }
     methods: [GET]
     
-ReservasMain:
+reserva_index_filtrado:
     path: /
-    defaults: { _controller: UNTDFReservasAulasBundle:ReservasMain:index }
+    defaults: { _controller: UNTDFReservasAulasBundle:Reserva:indexfiltrado }
 
