FechaEspecial * Agregue un metodo para poder consultar si una fecha dada es especial. FechaEspecial y Reserva * modifique el format del incorrecto yyyy-mm-dd al correcto yyyy-MM-dd (mm es para minutos, MM para el mes) Reserva * ahora, cuando se elije una fecha especial, debajo del campo de fecha aparece un texto con la descripcion de la fecha especial Reserva * agregue un archivo scriptsjs en el que se cargan los scripts comunes para la fecha edit/new

--- a/src/UNTDF/ReservasAulasBundle/Resources/config/routing/fechaespecial.yml
+++ b/src/UNTDF/ReservasAulasBundle/Resources/config/routing/fechaespecial.yml
@@ -28,3 +28,8 @@ fechaespecial_delete:
     path:     /{id}/delete
     defaults: { _controller: "UNTDFReservasAulasBundle:FechaEspecial:delete" }
     methods:  [POST, DELETE]
+    
+fechaespecial_verificarfechaespecial:
+    path:     /verificarfechaespecial
+    defaults: { _controller: "UNTDFReservasAulasBundle:FechaEspecial:verificarfechaespecial" }
+    methods: [GET]
